Fix tasks overlapping ion-tabs by increasing bottom padding
Increased bottom padding on .tasks-container from 2rem to 6rem to provide
adequate clearance for the ion-tabs bar and additional margin spacing.

--- a/src/app/tabs/tab-list/tab-list.page.scss
+++ b/src/app/tabs/tab-list/tab-list.page.scss
@@ -129,7 +129,7 @@
 .tasks-container {
   display: flex;
   justify-content: center;
-  padding: 0 1rem 2rem;
+  padding: 0 1rem 6rem;
   width: 100%;
   animation: fadeInSubtle 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.15s;
   animation-fill-mode: both;
